# parser_ini

./: CMakeLists.txt  in.ini  simple_parser.cpp
include/: parser_ini.h
parser_ini/: CMakeLists.txt  parser_ini.h
simple_parser/: CMakeLists.txt  simple_parser.cpp
